fix: add explicit height to social link icons, which is needed on Safari

--- a/packages/theme-default/src/components/SocialLinks/index.module.scss
+++ b/packages/theme-default/src/components/SocialLinks/index.module.scss
@@ -1,6 +1,6 @@
 .social-links-icon {
   width: 24px;
-  height: 100%;
+  height: 24px;
   display: flex;
   fill: currentColor;
   margin-left: 0.5rem;
